Add separate file for styles

--- a/index.html
+++ b/index.html
@@ -2,49 +2,29 @@
 <html>
 
 <head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marius Retegan</title>
-    <style type="text/css">
-        body {
-            margin: 40px auto;
-            max-width: 650px;
-            line-height: 1.6;
-            font-family: 'Lato';
-            color: #333333;
-            background-color: #fafafa;
-            padding: 0 10px
-        }
-        h1 {
-            text-align: center
-        }
-        h2,
-        h3 {
-            line-height: 1.2
-        }
-        a {
-            text-decoration: none;
-        }
-        a:link {
-            color: #283593;
-        }
-        a:visited {
-            color: #6a1b9a;
-        }
-    </style>
+    <link rel='stylesheet' href='assets/styles.css'>
+    <title>Random Notes | Marius Retegan</title>
 </head>
 
 <body>
     <header>
-        <h1>Marius Retegan</h1>
-        <aside>
-        <p style='text-align: center;'>
-            Scientist at <a href='http://www.esrf.eu'>The European Syncrotron</a><br>
-            marius.retegan (at) esrf.eu<br>
-            +33 (0) 4 38 88 19 29
-        </p>
-        </aside>
+        <h1>Random Notes</h1>
+        <hr></hr>
     </header>
+    <p>2019-05-25 <a href='https://www.reddit.com/r/homelab/comments/6la9o7/my_isps_modemrouter_prevents_nat_loopback_so_i'>Changing iternet providers</a></p>
+</body>
 
+<footer>
+    <p>© Copyright 2019, Marius Retegan</p>
+</footer>
 </html>
+
+<!-- <p style='text-align: center;'>
+    Scientist at <a href='http://www.esrf.eu'>The European Syncrotron</a><br>
+    marius.retegan (at) esrf.eu<br>
+    +33 (0) 4 38 88 19 29
+</p> -->
