--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Random Notes</h1>
         <hr></hr>
     </header>
-    <p>2019-05-25 <a href='https://www.reddit.com/r/homelab/comments/6la9o7/my_isps_modemrouter_prevents_nat_loopback_so_i'>Changing iternet providers</a></p>
+    <!-- <p>2019-05-25 <a href='https://www.reddit.com/r/homelab/comments/6la9o7/my_isps_modemrouter_prevents_nat_loopback_so_i'>Changing iternet providers</a></p> -->
 </body>
 
 <footer>
