--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:400,700'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css'>
+    <link rel='stylesheet' href='https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css'>
     <link rel='stylesheet' href='assets/styles.css'>
-    <title>Random Notes | Marius Retegan</title>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+    <title>Marius Retegan | Random Notes</title>
 </head>
 
 <body>
-    <header>
-        <h1>Random Notes</h1>
-        <hr></hr>
-    </header>
+    <h1>Marius Retegan</h1>
+    <p>I am a scientist and a programmer working at the <a href='http://www.esrf.eu'>European Synchrotron</a> on making spectroscopy calculations accessible to our users.</p>
+    You can find my code on <i class='fab fa-github'></i> <a href='https://github.com/mretegan'>Github</a> and my publication list on <i class='ai ai-orcid'></i> <a href='https://orcid.org/0000-0002-1525-1094'>ORCID</a>. 
+    <!-- <hr></hr> -->
+    <!-- <h2>Random Notes</h2> -->
     <!-- <p>2019-05-25 <a href='https://www.reddit.com/r/homelab/comments/6la9o7/my_isps_modemrouter_prevents_nat_loopback_so_i'>Changing iternet providers</a></p> -->
+    <!-- <hr></hr> -->
 </body>
 
-<footer>
-    <p>© Copyright 2019, Marius Retegan</p>
-</footer>
+<!-- <footer> -->
+<!--     <p>© Copyright 2019, Marius Retegan</p> -->
+<!-- </footer> -->
 </html>
-
-<!-- <p style='text-align: center;'>
-    Scientist at <a href='http://www.esrf.eu'>The European Syncrotron</a><br>
-    marius.retegan (at) esrf.eu<br>
-    +33 (0) 4 38 88 19 29
-</p> -->
