--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Marius Retegan</h1>
-    <p>I am a scientist and a programmer working at the <a href='http://www.esrf.eu'>European Synchrotron</a> on developing tools to make spectroscopy calculations accessible to our users.</p>
+    <p>I am a scientist and a software developer at the <a href='http://www.esrf.eu'>European Synchrotron</a> where I build tools to make theoretical simulations and data analysis accessible to our users.</p>
     You can find my code on <i class='fab fa-github'></i> <a href='https://github.com/mretegan'>Github</a>, my publication list on <i class='ai ai-orcid'></i> <a href='https://orcid.org/0000-0002-1525-1094'>ORCID</a>, and my employment history on <i class='fab fa-linkedin'></i> <a href='https://www.linkedin.com/in/mariusretegan'>LinkedIn</a>.
     <!-- <hr></hr> -->
     <!-- <h2>Random Notes</h2> -->
